force-app/main/default/objects/Partner__c/Partner__c.object-meta.xml
<CustomObject>
    <label>Partner</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Partner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>