force-app/main/default/objects/Partner__c/fields/Partner_Access__c.field-meta.xml
<CustomField>
    <fullName>Partner_Access__c</fullName>
    <label>Partner Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Funding Partner Access</fullName>
            </value>
            <value>
                <fullName>Partner Level Access</fullName>
            </value>
            <value>
                <fullName>Limited Access – Anonymous Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>